--- a/src/client/directives/footer/footer.jade
+++ b/src/client/directives/footer/footer.jade
@@ -1,1 +1,7 @@
-.footer-dir footer
+.footer-dir 
+  .container
+    .row
+      p
+        i.fa.fa-copyright(aria-hidden='true')
+        |  2017 VitalSpace Estate Agents.
+      p v#{package.version}
