--- a/src/client/directives/header/header.jade
+++ b/src/client/directives/header/header.jade
@@ -1,1 +1,5 @@
-.header-dir header
+.header-dir 
+  .container 
+    .branding
+      a.logo(href="/")
+        img.logo(src="public/img/VitalSpaceLogo-2016.png")
