--- a/src/client/modals/task/task.jade
+++ b/src/client/modals/task/task.jade
@@ -1,5 +1,71 @@
 .modal.task-modal
-  h1 task
-  p(ng-click='setDate()') {{task.date | date:'mediumDate'}}
-  p {{task.date | date:'shortTime'}}
+  h1 Book a maintenance appointment
+  form(name='forms.myForm', ng-submit='save()', novalidate)
+    .form-item
+      label For:
+      select(ui-select2='options', ng-model='task.assignedTo')
+        option(ng-repeat='user in maintenance', value='{{user._id}}') {{user.displayName || user.local.email}}'s diary
+    .form-item
+      label Property:
+      select(ui-select2='options', ng-model='task.property')
+        option(ng-repeat='property in getProperties()', value='{{property.RoleId}}') {{property.displayAddress}}
+    .form-item
+      .half
+        label Job:
+        select(ui-select2='options', ng-model='task.job')
+          option(ng-repeat='job in jobs', value='{{job}}') {{job}}
+      .half
+        label Status:
+        select(ui-select2='options', ng-model='task.status')
+          option(ng-repeat='status in statuses', value='{{status.id}}') {{status.name}}
+    .form-item
+      .half
+        label Date:
+        input(type='text', tap='setDate()', value='{{task.date | date:"mediumDate"}}')
+      .half
+        label Time:
+        input(type='time', ng-model='task.date')
+      .half
+        label Duration:
+        input(type='time', ng-model='task.duration')
+    .form-item
+      label Job brief:
+      code-mirror(ng-model='task.brief', options='{mode:"markdown"}')
+    .form-item
+      label Cost:
+      input(type='number', name='cost', ng-model='task.cost', required)
+      small.error(ng-show='submitted && forms.myForm.cost.$error.required') Please enter the cost of the job
+    .form-item
+      label Job card:
+      .documents
+        .drop-box(ngf-drop='uploadFiles($files)', ngf-drag-over-class="'dragover'", ngf-multiple='true')
+          h3 Drop files here to upload
+          button.file-upload(type='file', ngf-select='uploadFiles($file, $invalidFiles)') Or click here to choose
+        .document-list(ng-show='task.documents.length')
+          .document(ng-repeat='document in task.documents')
+            a.document-link(ng-href='{{makeDownloadUrl(document)}}', target='_self')
+              img(ng-src='{{makeDownloadUrl(document)}}', ng-if='document.basetype==="image"')
+              .document-icon(ng-hide='document.basetype==="image"', class='{{document.basetype}}')
+                img.logo(src="public/img/icons/vs-document.png")
+            .filename 
+              label Name: 
+              span(ng-show='!document.editing') &nbsp;{{document.name || document.originalFilename}}
+              input(type='text', ng-model='document.name', ng-show='document.editing', placeholder='Name')
+            .by 
+              label Created by: 
+              | {{document.user.local.email}}
+            .on 
+              label Created on: 
+              | {{document.date | date:'mediumDate'}}, {{document.date | date:'shortTime'}}
+            .controls(ng-show='auth.checkRoles(["superadmin", "admin"])')
+              a.edit(href='', ng-click='document.editing=!document.editing', ng-show='!document.editing') Edit
+              a.save(href='', ng-click='saveDocument(document)', ng-show='document.editing') Save
+              a.delete(href='', ng-click='deleteDocument(document)') Delete
+    .form-item
+      label Created by:
+      span {{task.createdDate | date:'mediumDate'}}, {{task.createdDate | date:'shortTime'}} | 
+        img(gravatar-src='task.createdBy.local.email')
+        span {{task.createdBy.displayName || task.createdBy.local.email}}
+    .controls
+      input.submit(type='submit', value='Submit')
   a.close-reveal-modal(ng-click='cancel()') &times;
