--- a/src/client/routes/dashboard/dashboard.jade
+++ b/src/client/routes/dashboard/dashboard.jade
@@ -1,2 +1,33 @@
 .dashboard-route
-  callendar
+  .toolbar
+    .today {{today | date:'EEEE, MMM dd, yyyy'}}
+    .user-select
+      select.usertheme(ng-model='$root.selectedUser', ui-select2='userSelectOptions', theme='usertheme', ng-change='hidePopup()', style='width:100%')
+        option(ng-repeat='user in maintenance', value='{{user._id}}') {{user.displayName || user.local.email}}
+    .dates
+      date-swiper(config='{prefix:"toolbar", modifier:1.5, show:true}')
+    .income {{income = calculateWeeklyIncome(); ''}}
+      h4 Weekly Target
+      .income-item
+        label Income
+        span {{income.amount | currency:'£'}}
+      .income-item
+        label Target
+        span {{income.target | currency:'£'}}
+      .income-item
+        label +/-
+        span(ng-class='{loss:income.profitloss<0}') {{income.profitloss | currency:'£'}}
+    .counts
+      h4 Weekly Activities
+      .counts-item
+        label Jobs
+        span {{income.jobs}}
+      .counts-item
+        label Quotes
+        span {{income.quotes}}
+    .users
+      h4 Users
+      .user(ng-repeat='user in staff')
+        img(gravatar-src='user.local.email')
+        | {{user.displayName || user.local.email}}
+  calendar
