--- a/src/client/directives/login/login.jade
+++ b/src/client/directives/login/login.jade
@@ -1,7 +1,7 @@
 .login-dir(ng-hide='auth.loggedIn() || auth.loading()')
   .login-holder
     .login-form
-      h2 Log in or Sign up
+      h2 Please Log in
       form(name='loginForm', novalidate, ng-submit='login()', ignore='true')
         div
           input(type='email', name='email', required, ng-model='email', placeholder='Email address')
@@ -13,20 +13,5 @@
         div
           .error {{message}}
           input.button(type='submit', value='Login')
-          input.button(type='button', ng-click='signup()', value='Sign Up')
         .forgot-pass
           a(ui-sref='forgot') Forgot your password?
-        div
-          p or use one of these...
-        .social
-          a.button.twitter(href='/api/twitter', target='_self')
-            i.fa.fa-twitter
-            | &nbsp;Twitter
-          | &nbsp;
-          a.button.facebook(href='/api/facebook', target='_self')
-            i.fa.fa-facebook
-            | &nbsp;Facebook
-          | &nbsp;
-          a.button.github(href='/api/github', target='_self')
-            i.fa.fa-github
-            | &nbsp;Github
