--- a/src/client/directives/calendar/calendar.jade
+++ b/src/client/directives/calendar/calendar.jade
@@ -1,4 +1,8 @@
 .calendar-dir
+  .controls
+    a(href='', tap='prev()') &lt;&lt; Prev
+    a(href='', tap='goToToday()') Today
+    a(href='', tap='next()') Next &gt;&gt;
   .carousel
     .week(ng-repeat='week in weeks')
       .day(ng-repeat='day in week.days', ng-class='{selected:isSelected(day.day)}')
@@ -6,7 +10,7 @@
         .hours
           .hour(ng-repeat='hour in day.hours', tap='openTask({date:hour}, $event)')
             .legend {{hour | date:'shortTime'}}
-          task(ng-repeat='task in day.tasks | filter:$root.selectedUser', style='top:{{task.top}}rem; height:calc({{task.height}}rem + 1px)', ng-click='openTask(task, $event)', class='{{task.status}}')
+          task(ng-repeat='task in day.tasks | filter:$root.selectedUser | byStatus:filters', style='top:{{task.top}}rem; height:calc({{task.height}}rem + 1px)', ng-click='openTask(task, $event)', class='{{task.status}}')
         .income {{income = calculateDailyIncome(day.day); ''}}
           .income-item
             label Income
