--- a/src/client/modals/task/task.jade
+++ b/src/client/modals/task/task.jade
@@ -2,41 +2,41 @@
   h1 Book a maintenance appointment
   form(name='forms.myForm', ng-submit='save()', novalidate)
     .form-item
-      label For:
-      select(ui-select2='options', ng-model='task.assignedTo')
+      label.title For:
+      select(sumoselect='options', ng-model='task.assignedTo')
         option(ng-repeat='user in maintenance', value='{{user._id}}') {{user.displayName || user.local.email}}'s diary
     .form-item
-      label Property:
-      select(ui-select2='options', ng-model='task.property')
+      label.title Property:
+      select(sumoselect='options', ng-model='task.property')
         option(ng-repeat='property in getProperties()', value='{{property.RoleId}}') {{property.displayAddress}}
+    
+    .form-item.half
+      label.title Job:
+      select(sumoselect='options', ng-model='task.job')
+        option(ng-repeat='job in jobs', value='{{job}}') {{job}}
+    .form-item.half
+      label.title Status:
+      select(sumoselect='options', ng-model='task.status')
+        option(ng-repeat='status in statuses', value='{{status.id}}') {{status.name}}
+
+    .form-item.half
+      label.title Date:
+      input(type='text', tap='setDate()', value='{{task.date | date:"mediumDate"}}')
+    .form-item.half
+      label.title Time:
+      input(type='time', ng-model='task.date')
+    .form-item.half
+      label.title Duration:
+      input(type='time', ng-model='task.duration')
     .form-item
-      .half
-        label Job:
-        select(ui-select2='options', ng-model='task.job')
-          option(ng-repeat='job in jobs', value='{{job}}') {{job}}
-      .half
-        label Status:
-        select(ui-select2='options', ng-model='task.status')
-          option(ng-repeat='status in statuses', value='{{status.id}}') {{status.name}}
-    .form-item
-      .half
-        label Date:
-        input(type='text', tap='setDate()', value='{{task.date | date:"mediumDate"}}')
-      .half
-        label Time:
-        input(type='time', ng-model='task.date')
-      .half
-        label Duration:
-        input(type='time', ng-model='task.duration')
-    .form-item
-      label Job brief:
+      label.title Job brief:
       code-mirror(ng-model='task.brief', options='{mode:"markdown"}')
     .form-item
-      label Cost:
+      label.title Cost:
       input(type='number', name='cost', ng-model='task.cost', required)
       small.error(ng-show='submitted && forms.myForm.cost.$error.required') Please enter the cost of the job
     .form-item
-      label Job card:
+      label.title Job card:
       .documents
         .drop-box(ngf-drop='uploadFiles($files)', ngf-drag-over-class="'dragover'", ngf-multiple='true')
           h3 Drop files here to upload
@@ -50,20 +50,11 @@
             .filename 
               label Name: 
               span(ng-show='!document.editing') &nbsp;{{document.name || document.originalFilename}}
-              input(type='text', ng-model='document.name', ng-show='document.editing', placeholder='Name')
-            .by 
-              label Created by: 
-              | {{document.user.local.email}}
-            .on 
-              label Created on: 
-              | {{document.date | date:'mediumDate'}}, {{document.date | date:'shortTime'}}
             .controls(ng-show='auth.checkRoles(["superadmin", "admin"])')
-              a.edit(href='', ng-click='document.editing=!document.editing', ng-show='!document.editing') Edit
-              a.save(href='', ng-click='saveDocument(document)', ng-show='document.editing') Save
               a.delete(href='', ng-click='deleteDocument(document)') Delete
     .form-item
-      label Created by:
-      span {{task.createdDate | date:'mediumDate'}}, {{task.createdDate | date:'shortTime'}} | 
+      label.title Created by:
+      span {{task.createdDate | date:'mediumDate'}}, {{task.createdDate | date:'shortTime'}} | &nbsp;
         img(gravatar-src='task.createdBy.local.email')
         span {{task.createdBy.displayName || task.createdBy.local.email}}
     .controls
