--- a/src/client/directives/login/login.jade
+++ b/src/client/directives/login/login.jade
@@ -15,4 +15,4 @@
         .error {{message}}
         input.button(type='submit', value='Login')
       .forgot-pass
-        a(ui-sref='forgot') Forgot your password?
+        a(ui-sref='forgot') Forgot your password? :)
