--- a/src/client/directives/task/task.jade
+++ b/src/client/directives/task/task.jade
@@ -1,3 +1,5 @@
 span.task-dir {{assigned = selectById(users.items,task.assignedTo); '' }}
   img(gravatar-src='assigned.local.email') 
-  | {{task.title}}
+  | {{task.job}}
+  p {{task.property}}
+    
