--- a/src/client/directives/menu/menu.jade
+++ b/src/client/directives/menu/menu.jade
@@ -5,3 +5,6 @@ ul.menu-dir
   li(ng-class="{selected:state('setup')}", ng-show="auth.checkRoles(['admin', 'superadmin'])")
     a(ui-sref='setup')
       span Setup
+  li
+    a(href='/api/logout', target='_self') 
+      span Log out
