--- a/src/client/index.jade
+++ b/src/client/index.jade
@@ -12,7 +12,7 @@ html
     link(rel="mask-icon", href="public/favicon/safari-pinned-tab.svg", color="#5bbad5")
     link(rel='stylesheet', href='../../bower_components/humane-js/themes/libnotify.css')
     meta(name="theme-color", content="#ffffff")
-  body(ng-app='vs-maintenance', tap='bodyTap($event)', ng-class='{"dashboard-state":state("dashboard"),"logged-in":auth.getUser()}')
+  body(ng-app='vs-maintenance', ng-click='bodyTap($event)', ng-class='{"dashboard-state":state("dashboard"),"logged-in":auth.getUser()}')
     header
     menu.mobile-menu
     login
