--- a/src/client/routes/profile/profile.jade
+++ b/src/client/routes/profile/profile.jade
@@ -1,11 +1,14 @@
-.profile
+.profile-page
   h1 Profile
   form(name='myForm', ng-submit='myForm.$valid && profile.save()')
-    label Display name
-    input(type='text', ng-model='profile.item.displayName')
-    label Telephone number
-    input(type='text', ng-model='profile.item.telephone')
-    label Email address
-    input(type='email', ng-model='profile.item.local.email')
-    div
+    .form-item
+      label Display name
+      input(type='text', ng-model='profile.item.displayName')
+    .form-item
+      label Telephone number
+      input(type='text', ng-model='profile.item.telephone')
+    .form-item
+      label Email address
+      input(type='email', ng-model='profile.item.local.email')
+    .controls
       input(type='submit', value=' Save ')
